# rust-ci

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose-build.yml  docker-compose.yml  rust_ci.db
.cargo/: config.toml
src/: db.rs  i18n.rs  main.rs  models.rs  templates.rs
src/handlers/: auth.rs  builds.rs  mod.rs  project_logs.rs  projects.rs  webhook.rs
templates/: base.html  build_detail.html  dashboard.html  login.html  project_edit.html  project_log_viewer.html  project_logs.html  projects.html  users.html
